--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^4.1.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.14.1"
