--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/core": "^0.88.0",
+    "@nivo/line": "^0.88.0",
     "apexcharts": "^4.1.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
