--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.14.1"
   },
