--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.14.1"
   },
