--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nivo/core": "^0.88.0",
     "@nivo/line": "^0.88.0",
     "apexcharts": "^4.1.0",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
