--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.0.2",
-    "recharts": "^2.14.1"
+    "recharts": "^2.14.1",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
