--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.14.1",
