--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-otp-input": "^3.1.1",
