--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
