--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
