--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.14.1",
+    "semantic-ui-react": "^2.1.5",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
